<resources>
    <string name="app_name">Fragment Handling</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_alpha">Alpha</string>
    <string name="btn_beta">Beta</string>
    <string name="et_data">Enter Data</string>
    <string name="tv_to_beta">Send to Beta</string>
    <string name="tv_from_beta">Data from Beta</string>
    <string name="tv_to_alpha">Send to Alpha</string>
    <string name="tv_from_alpha">Data from Alpha</string>
</resources>